<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
			  android:paddingLeft="@dimen/activity_horizontal_margin"
			  android:paddingRight="@dimen/activity_horizontal_margin">

    <TextView
	    android:id="@+id/indicator_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
	    />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/stack"/>

	<ListView
		android:id="@android:id/list"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"/>

</LinearLayout>